--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,10 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
     //intuit , it will manage the changes of text sizes when  of the screen is changing
+
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 }
